Forgot to add my own classes to the vcproj file
//TODO
Brush (Between black and white)
Moving image (To paint correctly)
Painting in image
Eraser

--- a/Middleware_practica/projects/vs-2022/OpenGL Example.vcxproj.filters
+++ b/Middleware_practica/projects/vs-2022/OpenGL Example.vcxproj.filters
@@ -53,4 +53,18 @@
       <Filter>Resource Files</Filter>
     </QtRcc>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\code\Blitter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\Brush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\HeightBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\RoundBrush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
