--- a/Middleware_practica/projects/vs-2022/OpenGL Example.vcxproj
+++ b/Middleware_practica/projects/vs-2022/OpenGL Example.vcxproj
@@ -119,6 +119,12 @@
   <ItemGroup>
     <QtRcc Include="..\..\resources\resources.qrc" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\code\Blitter.h" />
+    <ClInclude Include="..\..\code\Brush.h" />
+    <ClInclude Include="..\..\code\HeightBuffer.h" />
+    <ClInclude Include="..\..\code\RoundBrush.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
