--- a/Middleware_practica/projects/vs-2022/OpenGL Example.vcxproj.filters
+++ b/Middleware_practica/projects/vs-2022/OpenGL Example.vcxproj.filters
@@ -75,5 +75,8 @@
     <ClInclude Include="..\..\libraries\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\libraries\stb_image_resize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
